--- a/.github/workflows/calculatorSelenium.yml
+++ b/.github/workflows/calculatorSelenium.yml
@@ -19,21 +19,22 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-
+        
+    # Install Chrome browser before running the test
     - name: Install Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
 
+    # Build the Maven and run the test    
     - name: Build with Maven
       run: mvn -B package --file pom.xml    
 
-    - name: Run Tests
-      run: mvn test
-
+    # Test report compilation step
     - name: Compile Test Report
       run: mvn surefire-report:report
 
+    #Upload test results into a report
     - name: Upload Test Results
       uses: actions/upload-artifact@v3
       with:
